--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
 
 <!-- PAGE STUFF -->
 <div class="rela-block page">
-    <div class="rela-block top-bar">
-        <div class="caps name"><div class="abs-center">Kyle J Shanks</div></div>
+  <div class="rela-block top-bar">
+    <div class="caps name">
+      <div class="abs-center">
+        Kyle J Shanks
+        <div class="contact-info">
+          <p>123 My Place Drive</p>
+          <p>Astoria, New York 11105</p>
+          <p>1-800-CALLPLZ</p>
+          <p>emailsareforsquares@gmail.com</p>
+        </div>
+      </div>
     </div>
+  </div>
     <div class="side-bar">
         <div class="mugshot">
             <div class="logo">
                 <svg viewbox="0 0 80 80" class="rela-block logo-svg">
                     <path d="M 10 10 L 52 10 L 72 30 L 72 70 L 30 70 L 10 50 Z" stroke-width="2.5" fill="none"/>
                 </svg>
-                <p class="logo-text">kj</p>
+                <p class="logo-text">MAP</p>
             </div>
-        </div>
-        <p>123 My Place Drive</p>
-        <p>Astoria, New York 11105</p>
-        <p>1-800-CALLPLZ</p>
-        <p>michaelandikaputra@gmail.com</p><br>
+        </div><br>
         <p class="rela-block social twitter">Twitter stuff</p>
         <p class="rela-block social pinterest">Pinterest things</p>
         <p class="rela-block social linked-in">Linked-in man</p>
