--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="rela-block top-bar">
     <div class="caps name">
       <div class="abs-center">
-        Kyle J Shanks
+        Michael Andika Putra
         <div class="contact-info">
           <p>123 My Place Drive</p>
           <p>Astoria, New York 11105</p>
